--- a/Python Projects/Classification/give_me_some_credit/credit_default_prediction.ipynb
+++ b/Python Projects/Classification/give_me_some_credit/credit_default_prediction.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,6 +127,24 @@
     "\n",
     "df_train.rename(columns=rename_dict, inplace=True)\n",
     "df_test.rename(columns=rename_dict, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_train.to_csv('cs-training.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_test.to_csv('cs-test.csv', index = False)"
    ]
   },
   {
